--- a/app/src/main/res/layout-land/list_item_first.xml
+++ b/app/src/main/res/layout-land/list_item_first.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/list_item_first_padding"
-        android:background="@color/white"
+        android:focusable="true"
         app:columnCount="3">
 
         <TextView
