--- a/app/src/main/res/layout/widget_list_item_first.xml
+++ b/app/src/main/res/layout/widget_list_item_first.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="@dimen/widget_list_item_padding"
-    android:focusable="true">
+    android:background="@drawable/widget_list_item_selector">
 
     <TextView
         android:id="@+id/text_update_time"
