--- a/app/src/main/res/layout/widget_list_item_load_more.xml
+++ b/app/src/main/res/layout/widget_list_item_load_more.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
-    style="?android:attr/borderlessButtonStyle"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_list_item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/widget_list_item_estimated_height"
     android:textColor="@color/black"
     android:gravity="center"
-    android:text="@string/widget_button_load_more"
-    android:focusable="true"/>
+    android:background="@drawable/widget_list_item_selector"
+    android:text="@string/widget_button_load_more" />
