Added content descriptions to layout buttons

--- a/app/src/main/res/layout/list_item_loading.xml
+++ b/app/src/main/res/layout/list_item_loading.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:text="@string/button_retry"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:contentDescription="@string/button_retry"/>
 
 </FrameLayout>
