--- a/app/src/main/res/layout/detail_extras_section.xml
+++ b/app/src/main/res/layout/detail_extras_section.xml
@@ -142,5 +142,6 @@
         android:layout_centerInParent="true"
         android:textColor="@color/white"
         android:text="@string/button_retry"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:contentDescription="@string/button_retry"/>
 </RelativeLayout>
