--- a/app/src/main/res/layout/widget_list_item_load_more.xml
+++ b/app/src/main/res/layout/widget_list_item_load_more.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- We don't use a Button here with attr?borderlessButtonBtyle it will make the button focusable.
+Focusable views somehow do not  fire any pending intents in widgets.-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_list_item"
     android:layout_width="match_parent"
