--- a/app/src/main/res/drawable-v21/selector_list_item_base.xml
+++ b/app/src/main/res/drawable-v21/selector_list_item_base.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?attr/colorControlHighlight">
-    <item android:drawable="@color/white" />
+    android:color="@color/button_highlight">
+    <item android:drawable="@color/list_item_bg_color"/>
 </ripple>
