--- a/app/src/main/res/drawable-v21/selector_list_item_first.xml
+++ b/app/src/main/res/drawable-v21/selector_list_item_first.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/widget_item_highlight">
+    android:color="@color/button_highlight">
+    <item android:drawable="@color/list_item_first_bg_color"/>
 </ripple>
