--- a/app/src/main/res/drawable-v21/selector_widget_list_item.xml
+++ b/app/src/main/res/drawable-v21/selector_widget_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/widget_item_highlight">
+    android:color="@color/button_highlight">
     <item android:id="@android:id/mask" android:drawable="@color/white"/>
 </ripple>
