--- a/app/src/main/res/drawable-v21/selector_widget_refresh.xml
+++ b/app/src/main/res/drawable-v21/selector_widget_refresh.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?attr/colorControlHighlight">
-    <item android:drawable="@color/white_grey"/>
+    android:color="@color/button_highlight">
 </ripple>
