--- a/app/src/main/res/drawable/selector_list_item_first.xml
+++ b/app/src/main/res/drawable/selector_list_item_first.xml
@@ -15,8 +15,10 @@
  -->
 <!-- This selector works everywhere, but does not support ripple -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_activated="true" android:state_focused="false"
+        android:drawable="@color/activated"/>
 
-    <item android:state_window_focused="false" android:drawable="@android:color/white" />
+    <item android:state_window_focused="false" android:drawable="@color/list_item_first_bg_color" />
 
     <!-- Even though these two point to the same resource, have two states so the drawable will invalidate itself when coming out of pressed state. -->
     <item android:state_focused="true"  android:state_enabled="false" android:state_pressed="true" android:drawable="@drawable/abc_list_selector_holo_light" />
@@ -27,5 +29,5 @@
 
     <!-- Default, "just hangin' out" state.  This is part of
          ActionBarCompat -->
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@color/list_item_first_bg_color" />
 </selector>
