--- a/app/src/main/res/menu/menu_overflow.xml
+++ b/app/src/main/res/menu/menu_overflow.xml
@@ -2,13 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <item android:id="@+id/action_refresh"
-        android:title="@string/action_refresh"
+    <item android:id="@+id/overflow_refresh"
+        android:title="@string/overflow_refresh"
         android:orderInCategory="100"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_sort"
-        android:title="@string/action_sort"
+    <item android:id="@+id/overflow_sort"
+        android:title="@string/overflow_sort"
         android:orderInCategory="101"
         app:showAsAction="never"/>
 </menu>
