--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,16 +18,15 @@
         app:columnCount="4">
 
         <TextView
-            style="@style/ListItemBlackText"
+            android:textAppearance="@style/ListItemBlackText"
             android:id="@+id/text_symbol"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="@integer/gravity_list_item_text_view_rtl_fix"
             app:layout_columnWeight="4.75"
             tools:text="GPRO"/>
 
         <TextView
-            style="@style/ListItemBlackText"
+            android:textAppearance="@style/ListItemBlackText"
             android:id="@+id/text_recent_close"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -35,7 +34,7 @@
             tools:text="$6333.26"/>
 
         <TextView
-            style="@style/ListItemBlackText"
+            android:textAppearance="@style/ListItemBlackText"
             android:id="@+id/text_streak"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,7 +59,7 @@
             android:paddingStart="0dp"
             android:paddingRight="@dimen/text_view_full_name_padding_end"
             android:paddingLeft="0dp"
-            android:gravity="@integer/gravity_list_item_text_view_rtl_fix"
+
             app:layout_columnWeight="4.75"
             tools:text="GoPro, Inc."/>
 
