--- a/app/src/main/res/values-sw360dp-land/dimens.xml
+++ b/app/src/main/res/values-sw360dp-land/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- list item -->
-    <dimen name="list_item_horizontal_padding">@dimen/list_item_long_horizontal_padding</dimen>
+    <dimen name="list_item_horizontal_padding">104dp</dimen>
 </resources>
