implemented nav menu items, polished up ui

--- a/app/src/main/res/layout/activity_main_card_view.xml
+++ b/app/src/main/res/layout/activity_main_card_view.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:cardUseCompatPadding="true"
-    app:cardElevation="@dimen/detail_card_elevation">
+    app:cardElevation="@dimen/detail_card_elevation"
+    app:cardPreventCornerOverlap="false">
 
 </android.support.v7.widget.CardView>
