--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/navigation_help"
-        android:title="@string/navigation_help"/>
+    <item android:id="@+id/navigation_faq"
+        android:title="@string/navigation_faq"/>
 
     <item android:id="@+id/navigation_about"
         android:title="@string/navigation_about"/>
