--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,16 @@
         <item name="android:windowEnterTransition">@transition/detail_enter_transition</item>
     </style>
 
+    <!-- Overflow menu item -->
+    <style name="OverflowMenuItem">
+        <item name="android:padding">12dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:background">@drawable/selector_menu_overflow_item</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
     <!-- list_item_first.xml TextView style -->
     <style name="ListItemFirstTextLarge">
         <item name="android:textSize">@dimen/list_item_first_main_info_text_size</item>
