--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,4 +58,9 @@
     <dimen name="widget_min_resize_height">@dimen/widget_min_height</dimen>
     <dimen name="widget_list_item_padding">10dp</dimen>
     <dimen name="widget_list_item_estimated_height">60dp</dimen>
+
+    <!-- material design dialog specs-->
+    <dimen name="md_dialog_frame_margin">24dp</dimen>
+    <dimen name="md_list_item_height">48dp</dimen>
+    <dimen name="md_listitem_textsize">16sp</dimen>
 </resources>
