--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,13 @@
         <item name="android:focusable">true</item>
     </style>
 
+    <!-- Sort dialog radio button-->
+    <style name="SortDialogRadioButton">
+        <item name="android:minHeight">@dimen/md_list_item_height</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
+
     <!-- list_item_first.xml TextView style -->
     <style name="ListItemFirstTextLarge">
         <item name="android:textSize">@dimen/list_item_first_main_info_text_size</item>
