Minor bug fix 2 and some polish.
* Fixed a bug in which initDb sticky event would involuntarily be called and
thus had the possibility of loading twice.

* Fixed a bug in which the LoadDetailErrorEvent wasn't stickied.

Some Notes when app is launched from widget:
Phone:
DetailActivity --> onCreate w/ null, onNewIntent not called, even when app
opened.
MainActivity --> onCreate w/ null, new Intent does get called, even when
app opened.

Tablet:
MainActivity, onNewIntent only

--- a/app/src/main/res/layout/fragment_detail_land.xml
+++ b/app/src/main/res/layout/fragment_detail_land.xml
@@ -30,4 +30,14 @@
         android:layout_toEndOf="@+id/center_space"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/bar_chart_button"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginRight="16dp"
+        android:src="@drawable/ic_bar_chart"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/content_description_button_bar_chart"/>
 </RelativeLayout>
