--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,7 +12,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,4 +29,19 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/button_main_section_bar_chart"
+        android:layout_width="@dimen/button_bar_chart_size"
+        android:layout_height="@dimen/button_bar_chart_size"
+        android:layout_marginTop="@dimen/button_bar_chart_margin"
+        android:layout_marginRight="@dimen/button_bar_chart_margin"
+        android:layout_marginEnd="@dimen/button_bar_chart_margin"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/ic_bar_chart"
+        android:background="@drawable/selector_button_transparent"
+        android:focusable="true"
+        android:clickable="true"
+        android:contentDescription="@string/content_description_button_bar_chart"/>
+</RelativeLayout>
