--- a/app/src/main/res/layout/fragment_detail_land.xml
+++ b/app/src/main/res/layout/fragment_detail_land.xml
@@ -26,18 +26,8 @@
         android:layout_centerInParent="true"/>
 
     <include layout="@layout/fragment_detail_section_extras"
-        android:layout_toRightOf="@+id/center_space"
-        android:layout_toEndOf="@+id/center_space"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:id="@+id/bar_chart_button"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="16dp"
-        android:src="@drawable/ic_bar_chart"
-        android:layout_alignParentRight="true"
-        android:contentDescription="@string/content_description_button_bar_chart"/>
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/center_space"
+        android:layout_toEndOf="@+id/center_space" />
 </RelativeLayout>
