aligned stock arrows in detail fragment

--- a/app/src/main/res/layout-land/list_item_first.xml
+++ b/app/src/main/res/layout-land/list_item_first.xml
@@ -111,7 +111,7 @@
                     android:id="@+id/image_streak_arrow"
                     android:layout_width="@dimen/stock_arrow_size_first"
                     android:layout_height="@dimen/stock_arrow_size_first"
-                    android:contentDescription="@string/content_description_stock_arrow"
+                    tools:ignore="ContentDescription"
                     tools:src="@drawable/ic_streak_down"/>
             </LinearLayout>
         </LinearLayout>
