--- a/app/src/main/res/layout/fragment_detail_section_main.xml
+++ b/app/src/main/res/layout/fragment_detail_section_main.xml
@@ -3,7 +3,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_main_section"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/detail_section_horizontal_padding"
@@ -14,6 +13,7 @@
     android:paddingBottom="@dimen/detail_section_vertical_padding">
 
     <android.support.v7.widget.GridLayout
+        android:id="@+id/detail_main_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -44,7 +44,7 @@
         <TextView android:id="@+id/text_symbol"
             android:layout_width="0dp"
             android:gravity="center_horizontal"
-            android:textSize="@dimen/symbol_text_size"
+            android:textSize="@dimen/detail_symbol_text_size"
             android:textColor="@android:color/black"
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
@@ -86,14 +86,31 @@
             android:text="@string/percent_change"
             app:layout_columnWeight="1" />
 
-        <TextView
-            style="@style/DetailColumnsCommon.TextSize.DetailRight"
-            android:id="@+id/text_change_percent"
+        <LinearLayout
+            style="@style/DetailColumnsCommon.DetailLinearLayoutRight"
             android:layout_width="0dp"
-            android:textColor="@android:color/black"
-            app:layout_columnWeight="1"
-            tools:textColor="@color/stock_down_red"
-            tools:text="-333.33%" />
+            android:orientation="horizontal"
+            app:layout_columnWeight="1">
+
+            <TextView
+                android:id="@+id/text_change_percent_neg_sign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/detail_column_item_text_size"
+                android:textColor="@color/black"
+                android:text="@string/offset_negative_sign"
+                android:visibility="invisible"/>
+
+            <TextView
+                android:id="@+id/text_change_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/detail_column_item_text_size"
+                android:textColor="@android:color/black"
+                tools:textColor="@color/stock_down_red"
+                tools:text="333.33%" />
+            </LinearLayout>
+
 
         <TextView
             style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailMainLeft"
@@ -108,19 +125,28 @@
             app:layout_columnWeight="1">
 
             <TextView
-                android:id="@+id/text_streak"
+                android:id="@+id/text_streak_neg_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/column_item_text_size"
+                android:textSize="@dimen/detail_column_item_text_size"
                 android:textColor="@color/black"
-                tools:text="33 days"/>
+                android:text="@string/offset_negative_sign"
+                android:visibility="invisible"/>
+
+            <TextView
+                android:id="@+id/text_streak"
+                android:layout_width="@dimen/detail_extras_days_text_view_width"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/detail_column_item_text_size"
+                android:textColor="@color/black"
+                tools:text="1 day"/>
 
             <ImageView
                 style="@style/StreakArrow"
                 android:id="@+id/image_streak_arrow"
                 android:layout_width="@dimen/stock_arrow_size_normal"
                 android:layout_height="@dimen/stock_arrow_size_normal"
-                android:contentDescription="@string/content_description_stock_arrow"
+                tools:ignore="ContentDescription"
                 tools:src="@drawable/ic_streak_down"/>
         </LinearLayout>
 
