--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -4,7 +4,7 @@
     <!-- Values for the cardView detail view in tablets-->
     <dimen name="card_view_horizontal_margin">32dp</dimen>
     <dimen name="card_view_height">380dp</dimen>
-    <dimen name="symbol_text_size">30sp</dimen>
+    <dimen name="detail_symbol_text_size">30sp</dimen>
 
 
     <!-- list item -->
